2002-04-30 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

        * slabdisp.cpp: Only scale when tracking.

2002-04-30 Lieven Vanholme  <Lieven.Vanholme@rug.ac.be>

        * slabmode.cpp: Reset scaling after core region.

2002-03-18 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

        * slabmode.cpp: Improve portability.
	* slaboverlap.cpp: Ditto.
	* slaboverlap.h: Ditto.

2002-03-14 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

        * slabmode.h: Remember kt.
	* slabmode.cpp: Dito.

2002-03-14 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

        * slab.cpp: Refactor, fix memory leak, fix tracing.

2002-03-06 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

        * slab.cpp: Make use of new interface for traceroot.

2002-03-06 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

        * slab.cpp: Fix typo.

2002-03-06 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

        * slabdisp.cpp: Micro-optimise.

2002-02-12 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

        * slab.cpp: Improve definition of core and cladding (again).
	* slabdisp.cpp: Ditto.
	* slabdisp.h: Ditto.

2002-02-06 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

        * slab.cpp: Improve definition of core and cladding.
	* slabdisp.cpp: Ditto.
	
2002-01-29 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

        * slab.cpp: Update support for parameter getting/setting.

2001-01-21  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* slab.h: Add support for parameter getting/setting.
	* slab.cpp: Ditto.
	* slabdisp.cpp: Ditto.

2001-11-27  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* slabmode.cpp: Fix signs.

2001-11-16  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* slabmode.cpp: Fix multiplication.

2001-11-16  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* slabmode.cpp: Fix normalisation.

2001-11-09  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* slabmode.cpp: Fix normalisation.

2001-11-08  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* slabmode.cpp: Resolve name conflict.
