@@ -1,5 +1,9 @@
 2002-04-30 Peter Bienstman  <Peter.Bienstman@rug.ac.be>
 
+        * slab.cpp: Rework handling of degenerate modes.
+
+2002-04-30 Peter Bienstman  <Peter.Bienstman@rug.ac.be>
+
         * slabdisp.cpp: Only scale when tracking.
 
 2002-04-30 Lieven Vanholme  <Lieven.Vanholme@rug.ac.be>
